tools/fleet/fixtures/packets/invalid/wrong-provisioning-state.case
source=valid-work.packet
mutation=set Provisioning-State to SUPERVISOR_ASSUMED
expected=invalid
